preparation for production
